back to vanilla zsh, neovim, etc.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -146,3 +146,6 @@ run-shell "powerline-daemon -q --replace"
 source "/Users/cory/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf"
 set-option -g status-position top
 set -g status-interval 1
+
+# Terminal overrides for cursor shape in neovim
+set -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
