update for sc-dump

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -149,3 +149,6 @@ set -g status-interval 1
 
 # Terminal overrides for cursor shape in neovim
 set -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
+
+# Reattach-user-namespace to enable clipboard for nvim & tmux on OS X
+set-option -g default-command "which reattach-to-user-namespace > /dev/null && reattach-to-user-namespace -l $SHELL || $SHELL"
