--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,8 @@
 # This is Git's per-user configuration file.
 [user]
 	name = Cory Levinson
-	email = cory@soundcloud.com
+	email = cjlevinson@gmail.com
 [push]
 	default = simple
+[core]
+	editor = /usr/local/bin/nvim
